Fixed z-index problems

--- a/core/app/assets/stylesheets/evidence/evidence_collection.css.less
+++ b/core/app/assets/stylesheets/evidence/evidence_collection.css.less
@@ -166,16 +166,23 @@
   > .evidence-spacer-left  { float: left; }
   > .evidence-spacer-right { float: right; }
 
-  .discussion-interacting-users:after {
-    content: "";
-    display: block;
-    width: @middleLineWidth;
-    height: 100% + 7px;
-    background-color: @unsureBoxBackgroundColor;
-    position: absolute;
-    top: -7px;
-    left: 50%;
-    margin-left: -1px;   
+  .discussion-interacting-users {
+    > .interacting-users-names, > .interacting-users-avatars {
+      z-index: 2;
+      position: relative;
+    }
+    &:after {
+      content: "";
+      z-index: 1;
+      display: block;
+      width: @middleLineWidth;
+      height: 100% + 7px;
+      background-color: @unsureBoxBackgroundColor;
+      position: absolute;
+      top: -7px;
+      left: 50%;
+      margin-left: -1px;  
+    }
   }
 }
 
